--- a/src/i18n/lang/index.json
+++ b/src/i18n/lang/index.json
@@ -13166,7 +13166,7 @@
 	},
 	"kl8htg5": {
 		"zh-cn": "小程序配置",
-		"en": "Mini Program Configuration",
+		"en": "Configuration",
 		"zh-tw": "小程序配置"
 	},
 	"7olo2ok": {
@@ -19991,7 +19991,7 @@
 	},
 	"xlgzvm7": {
 		"zh-cn": "小程序导航配置",
-		"en": "Mini Program Navigation Configuration",
+		"en": "Navigation Setting",
 		"zh-tw": "小程序導航配置"
 	},
 	"b1vehj4": {
@@ -20021,7 +20021,7 @@
 	},
 	"ibubdz8": {
 		"zh-cn": "设置模板切换时间",
-		"en": "Set Template Switching Time",
+		"en": "set Switching Time",
 		"zh-tw": "設置模板切換時間"
 	},
 	"gcz22": {
@@ -37161,12 +37161,12 @@
 	},
 	"sisg387": {
 		"zh-cn": "小程序配置",
-		"en": "Mini Program Configuration",
+		"en": "Configuration",
 		"zh-tw": "小程序配置"
 	},
 	"dwy50e9": {
 		"zh-cn": "小程序导航配置",
-		"en": "Mini Program Navigation Configuration",
+		"en": "Navigation Setting",
 		"zh-tw": "小程序導航配置"
 	},
 	"u2xpgh9": {
